# local-bench

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  NOTICE  README.md
cli/: CHANGELOG.md  README.md  conftest.py  pyproject.toml
cli/$tmpdir/: run.json
cli/runs/: ladder-gemma4-31b-Q4_K_M.json  ladder-qwen36-27b-Q2_K.json  ladder-qwen36-27b-Q3_K_M.json  ladder-qwen36-27b-Q4_K_M.json  ladder-qwen36-27b-Q6_K.json  ladder-qwen36-27b-Q8_0.json
cli/runs/agentic/: gemma4-31b-Q4_K_M.scored.run1.json  qwable-5-27b-coder.scored.run1.json  qwable-5-27b-coder.scored.run2.json  qwen36-27b-Q2_K.scored.run1.json  qwen36-27b-Q3_K_M.scored.run1.json  qwen36-27b-Q4_K_M.scored.run1.json  qwen36-27b-Q6_K.scored.run1.json  qwen36-27b-Q8_0.scored.run1.json  qwopus36-27b-Q4_K_M.scored.run1.json
cli/runs/board/: board_v1.json  board_v2.json  board_v2.manifest.json
cli/runs/gemma-ladder/: gemma-4-12b-coder-fable5-Q8_0.json  gemma-4-12b-it-BF16.json  gemma-4-12b-it-Q3_K_M.json  gemma-4-12b-it-Q4_K_M.json  gemma-4-12b-it-Q5_K_M.json  gemma-4-12b-it-Q6_K.json  gemma-4-12b-it-Q8_0.json  gemma-4-12b-it-UD-Q2_K_XL.json
cli/runs/vast/: ornith-1.0-35b-bf16.json  (+8 more)
cli/runtime/: rootfs-exact-file-allowlist-v1.json  rootfs-package-allowlist-v1.json  runtime-build-v1.schema.json  wsl-support-baseline-v1.json
cli/scripts/: build_5axis_suite_release.py  build_6axis_suite_release.py  build_tc_json_v1.py
cli/tests/: agentic_contract_fixtures.py  agentic_journal_process_worker.py  board_fixtures.py  one_shot_fixtures.py  one_shot_runner_fakes.py  release_evidence_test_support.py  serving_helpers.py  test_agentic_appworld_adapter.py  test_agentic_execution_contract.py  test_agentic_failure_policies.py  test_agentic_fault_injection.py  test_agentic_hash_stability.py  test_agentic_native_bridge.py  test_agentic_native_identity.py  test_agentic_parser.py  test_agentic_protocol_schema.py  test_agentic_rank_gate.py  test_agentic_resume_identity.py  test_agentic_score_asr.py  test_agentic_scripted_runner.py  test_agentic_task_journal.py  test_agentic_task_journal_integration.py  test_agentic_task_pool.py  test_agentic_wsl_bridge.py  test_agentic_wsl_bridge_acceptance.py  test_appliance_builder.py  test_appliance_manifest.py  test_appliance_native_apparmor.py  test_appliance_native_lifecycle.py  test_appliance_native_provisioner.py  test_appliance_provisioner.py  test_appliance_release_scanner.py  test_appliance_runtime_identity.py  test_appliance_trust.py  test_appliance_worker.py  test_appworld_c_funnel_units.py  test_appworld_protocol_c_acceptance.py  test_appworld_protocol_c_gauntlet.py  test_appworld_protocol_c_units.py  test_appworld_sandbox_acceptance.py  (+143 more)
cli/tools/: appworld_c_funnel.py  appworld_canary_suite.py  appworld_canary_suite_sandboxed.py  appworld_canary_through_loop.py  appworld_feasibility_probe.py  appworld_gold_eval.py  appworld_protocol_c_scripted.py  appworld_rollback_probe.py  appworld_rpc_bypass_probe.py  appworld_scripted_solve_sandboxed.py  appworld_viability_probe.py  assemble_runtime_release.py  build_agentic_execution_contract.py  build_agentic_runtime.py  finalize_agentic_execution_contract.py  packaging_differential.py  refresh_agentic_execution_contract.py  rehearse_provisioner_transaction.py  rehearse_runtime_wsl.py  release_scanner.py  runtime_rootfs_build.sh  sign_runtime_release.py  sign_runtime_trust.py  verify_release_evidence.py
(+1488 files in other folders)
