[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localbench"
version = "0.1.0"
description = "Thin benchmark runner for OpenAI-compatible chat completion endpoints."
requires-python = ">=3.11"
dependencies = ["anyio>=4", "httpx>=0.27"]

[project.scripts]
localbench = "localbench.cli:main"

[project.optional-dependencies]
build = ["datasets>=2.20", "langdetect>=1.0.9"]
dev = ["pytest>=8"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
