[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localbench"
version = "0.1.0"
description = "Thin benchmark runner for OpenAI-compatible chat completion endpoints."
requires-python = ">=3.11"
dependencies = [
  "anyio>=4",
  "httpx>=0.27",
  "langdetect>=1.0.9",
  "math-verify>=0.9.0",
  "transformers>=4.51",
]

[project.scripts]
localbench = "localbench.cli:main"

[project.optional-dependencies]
build = ["datasets>=2.20"]
dev = ["pytest>=8", "nltk>=3.9"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
