[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "local-bench-ai"
version = "0.4.3"
description = "Benchmark runner for local-bench.ai - the community quality leaderboard for local AI setups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4",
  "httpx>=0.27",
  "jsonschema>=4.23,<5",
  "langdetect>=1.0.9",
  "math-verify>=0.9.0",
]

[project.urls]
Homepage = "https://local-bench.ai"
Methodology = "https://local-bench.ai/methodology"
Submit = "https://local-bench.ai/submit"
Repository = "https://github.com/local-bench/local-bench"

[project.scripts]
localbench = "localbench.cli:main"
localbench-monitor = "localbench.monitor_cli:main"

[project.optional-dependencies]
build = ["datasets>=2.20"]
dev = ["pytest>=8", "nltk>=3.9", "jinja2>=3.1"]
# jinja2 is a hard runtime dependency of transformers' apply_chat_template; without it the
# [hf] path fails at first render (caught by the 2026-07-05 user-path smoke, not by CI —
# the dev environment always carried jinja2 and masked it).
hf = ["transformers>=4.51", "jinja2>=3.1", "huggingface-hub>=0.30"]

[dependency-groups]
dev = ["pytest>=8", "nltk>=3.9", "jinja2>=3.1"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localbench = [
  "data/board_sources.json",
  "data/contracts/*.json",
  "data/licenses/*",
  "data/suites/tiny-smoke-v1/*",
  "data/suites/core-text-v1/*",
  "data/suites/core-text-v1/LICENSES/*",
  "scorers/ifbench/NOTICE",
  "scorers/bfcl/NOTICE",
  "scorers/bfcl_multi_turn/NOTICE",
  "submissions/schemas/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
markers = [
  "wsl: requires WSL2 AppWorld harness and bubblewrap",
]
